// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JS based CJS > GIVEN no plugin options THEN injects version 1`] = `
"'use strict';

var __getOwnPropNames = Object.getOwnPropertyNames;
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};

// tests/fixtures/build-in/javascript.cjs
var require_javascript = __commonJS({
  "tests/fixtures/build-in/javascript.cjs"(exports, module) {
    module.exports = {
      version: "1.2.1"
    };
  }
});
var javascript = require_javascript();

module.exports = javascript;
"
`;

exports[`JS based CJS > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"'use strict';

var __getOwnPropNames = Object.getOwnPropertyNames;
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};

// tests/fixtures/build-in/javascript.cjs
var require_javascript = __commonJS({
  "tests/fixtures/build-in/javascript.cjs"(exports, module) {
    module.exports = {
      version: "2022-02-01T14:30:30.000Z"
    };
  }
});
var javascript = require_javascript();

module.exports = javascript;
"
`;
